[gd_scene load_steps=7 format=2]

[ext_resource path="res://bullet/PlayerBullet.tscn" type="PackedScene" id=1]
[ext_resource path="res://bullet/AlienBullet.gd" type="Script" id=2]
[ext_resource path="res://assets/Enemies/alien/alien_bullet.png" type="Texture" id=3]
[ext_resource path="res://overlap/Hitbox.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.0
height = 6.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 3.0
height = 6.0

[node name="AlienBullet" instance=ExtResource( 1 )]
collision_mask = 7
script = ExtResource( 2 )
damage = 5

[node name="Sprite" parent="." index="0"]
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 0, 0 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" parent="." index="2"]
position = Vector2( 7.15256e-07, 2.38419e-07 )
scale = Vector2( 0.7, 0.4 )

[node name="hit_pos" parent="." index="3"]
position = Vector2( 6, 0 )

[node name="Hitbox" parent="." index="4" instance=ExtResource( 4 )]
collision_layer = 4
collision_mask = 2
monitoring = true

[node name="CollisionShape2D" parent="Hitbox" index="0"]
rotation = 1.5708
shape = SubResource( 2 )

[node name="Light2D" parent="." index="5"]
position = Vector2( 3, 0 )
texture_scale = 0.02
color = Color( 0.486275, 1, 0.278431, 1 )

[node name="Light2D2" parent="." index="6"]
position = Vector2( -3, 0 )
color = Color( 0.486275, 1, 0.278431, 1 )
energy = 1.5

[connection signal="area_entered" from="." to="." method="_on_AlienBullet_area_entered"]
[connection signal="area_entered" from="." to="." method="_on_EnemyBullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_AlienBullet_body_entered"]
[connection signal="body_entered" from="." to="." method="_on_EnemyBullet_body_entered"]

[editable path="Hitbox"]
